fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/Legacy_Customer__c.object-meta.xml
<CustomObject>
    <label>Legacy Customer</label>
    <pluralLabel>Legacy Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>