fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Acct3_Ref__c.field-meta.xml
<CustomField>
    <fullName>Acct3_Ref__c</fullName>
    <label>Acct 3 Ref</label>
    <type>Text</type>
</CustomField>