fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Cust_Nm__c.field-meta.xml
<CustomField>
    <fullName>Cust_Nm__c</fullName>
    <label>Cust Nm</label>
    <type>Text</type>
</CustomField>