fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <label>Do Not Call</label>
    <type>Checkbox</type>
    <description>Customer has opted out of outbound sales calls.</description>
</CustomField>