fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Email_Addr__c.field-meta.xml
<CustomField>
    <fullName>Email_Addr__c</fullName>
    <label>Email Addr</label>
    <type>Email</type>
</CustomField>