fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
    <description>Primary contact email address.</description>
</CustomField>