fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <type>Text</type>
    <description>Customer's full legal name as captured at onboarding.</description>
</CustomField>