fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified__c</fullName>
    <label>Last Verified</label>
    <type>Date</type>
    <description>Date the customer's contact details were last confirmed.</description>
</CustomField>