fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Migration_Batch__c.field-meta.xml
<CustomField>
    <fullName>Migration_Batch__c</fullName>
    <label>Migration Batch</label>
    <type>Text</type>
    <description>Identifier of the data-migration batch that created this record.</description>
</CustomField>