fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Region_Cd__c.field-meta.xml
<CustomField>
    <fullName>Region_Cd__c</fullName>
    <label>Region Cd</label>
    <type>Text</type>
</CustomField>