fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Seg__c.field-meta.xml
<CustomField>
    <fullName>Seg__c</fullName>
    <label>Seg</label>
    <type>Text</type>
</CustomField>