fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Text</type>
    <description>Segment</description>
</CustomField>