fixtures/messy_org/force-app/main/default/objects/Legacy_Customer__c/fields/X_Flag__c.field-meta.xml
<CustomField>
    <fullName>X_Flag__c</fullName>
    <label>X Flag</label>
    <type>Checkbox</type>
</CustomField>